packages/cashc/test/compiler/ParseError/for_loop_update_definition.cash
contract ForLoopUpdateDefinition() {
    function spend() {
        for (int i = 0; i < 3; int j = 0) {
            require(i < 3);
        }
    }
}
